# robot-gpt

./: .envtmp  .flake8  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  result.txt
.github/workflows/: ci.yml
robot_gpt/: hardware.py  image.py  main.py  robot.py
tests/: test_hardware.py  test_it_works.py  test_robot.py  test_robot_gpt.py
