[tool.poetry]
name = "robot-gpt"
version = "0.1.0"
description = ""
authors = ["bioerrorlog <bioerrorlog.contact@gmail.com>"]
readme = "README.md"
packages = [{include = "robot_gpt"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.2"
opencv-python = "^4.7.0.72"
imageai = "^3.0.3"


[tool.poetry.group.dev.dependencies]
poetry = "^1.4.1"
flake8 = "^6.0.0"
pytest = "^7.2.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
